class Smartlist {
  int listId;
  int mealplanId;
  int userId;
  int storeId;
  DateTime week;
  double amount;

  Smartlist({
    required this.listId,
    required this.mealplanId,
    required this.userId,
    required this.storeId,
    required this.week,
    required this.amount,
  });
}
