class Store {
  int storeId;
  String name;

  Store({
    required this.storeId,
    required this.name,
  });
}
